--- a/LzDecoder/nbproject/project.properties
+++ b/LzDecoder/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/LzDecoder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcommander-1.72.jar=D:\\Escritorio\\Multimedia\\jcommander-1.72.jar
+file.reference.jcommander-1.72.jar=jcommander-1.72.jar
 includes=**
 jar.compress=false
 javac.classpath=\
