--- a/LzDecoder/nbproject/private/private.properties
+++ b/LzDecoder/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\BlaiSB\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Arnau Vancells\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
