--- a/Proj Practiques/ProjectePractiques/nbproject/project.properties
+++ b/Proj Practiques/ProjectePractiques/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/ProjectePractiques.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcommander-1.72.jar=C:\\Users\\BlaiSB\\Desktop\\jcommander-1.72.jar
+file.reference.jcommander-1.72.jar-1=jcommander-1.72.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcommander-1.72.jar}
+    ${file.reference.jcommander-1.72.jar}:\
+    ${file.reference.jcommander-1.72.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
