--- a/Proj Practiques/ProjectePractiques/nbproject/project.properties
+++ b/Proj Practiques/ProjectePractiques/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/ProjectePractiques.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcommander-1.72.jar=C:\\Users\\BlaiSB\\Desktop\\jcommander-1.72.jar
+file.reference.jcommander-1.72.jar=jcommander-1.72.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -37,6 +37,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
