kumantaris pusats una mika

--- a/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
+++ b/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-i "zips/Cubo.zip" -e 1 --negative 1
+application.args=-i "zips/Cubo.zip" -e 1 --negative 1 -o "path_test.zip"
 compile.on.save=true
 do.depend=false
 do.jar=true
