--- a/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
+++ b/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-i "zips/Cubo.zip" -e 1 --binaritzation 69  -o "path_test.zip"
+application.args=-i "zips/Cubo.zip" --batch 1 --encode 1
 compile.on.save=true
 do.depend=false
 do.jar=true
