Bueno mira tu que aixo sembla que furula

--- a/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
+++ b/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-i "zips/Cubo.zip" --batch 1 --encode 1
+application.args=-i "zips/Cubo.zip" --batch 1 --decode 1 --nTiles 8
 compile.on.save=true
 do.depend=false
 do.jar=true
