--- a/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
+++ b/Proj Practiques/ProjectePractiques/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-application.args=-i "zips/Cubo.zip" --batch 1 --decode 1 --nTiles 8
+application.args=-i "zips/Cubo.zip" --batch 0 --encode 1 --decode 1 --tileSize 8 --threshold 110 --seekRange 8 --gop 10
 compile.on.save=true
 do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\BlaiSB\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Arnau Vancells\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
